removes system update backend API endpoint
