# src/modules/Backend/routes/swagger.json
@@ -1297,33 +1297,6 @@
         }
       }
     },
-    "/systemInfo/update": {
-      "get": {
-        "tags": ["systemInfo"],
-        "description": "Update all containers if possible",
-        "operationId": "updateContainerGet",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "204": {
-            "description": "Request successfully but no updates available"
-          },
-          "400": {
-            "description": "Update failed. Possibly no network connection.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "No update possible. Please check your network configuration."
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "systemInfo/environment": {
       "get": {
         "tags": ["systemInfo"],
